Updated bookmarks: removed duplicates and fixed case
ALHAMDULILLAH

--- a/BookMarkManger-HTML/bookmarkmanager.html
+++ b/BookMarkManger-HTML/bookmarkmanager.html
@@ -8,21 +8,89 @@
 <body>
     <h1>My Bookmarks</h1>
     <h2>Primary Bookmarks</h2>
-    <p>
-        <a target="_blank" href="https://google.com">Open Google</a>
-    </p>
-       <p><a target="_blank" href="https://chatgpt.com">Open Chatgpt</a></p>  
-       <p><a target="_blank" href="https://facebook.com">Open Facebook</a></p>
-       <p><a target="_blank" href="https://youtube.com">Open Youtube</a></p>  
+    <p>Here are some of my most frequently used bookmarks:</p>
+    <p>These links are essential for my daily tasks and activities:</p>
+
+    <ul>
+        <li><a target="_blank" href="https://google.com">Google</a></li>
+        <li><a target="_blank" href="https://chatgpt.com">ChatGPT</a></li>
+        <li><a target="_blank" href="https://facebook.com">Facebook</a></li>
+        <li><a target="_blank" href="https://youtube.com">YouTube</a></li>
+        <li><a target="_blank" href="https://wikipedia.org">Wikipedia</a></li>
+        <li><a target="_blank" href="https://news.ycombinator.com">Hacker News</a></li>
+        <li><a target="_blank" href="https://stackoverflow.com">Stack Overflow</a></li>
+        <li><a target="_blank" href="https://github.com">GitHub</a></li>
+        <li><a target="_blank" href="https://quora.com">Quora</a></li>
+        <li><a target="_blank" href="https://medium.com">Medium</a></li>
+        <li><a target="_blank" href="https://reddit.com">Reddit</a></li>
+        <li><a target="_blank" href="https://www.tamm.abudhabi/">Tamm</a></li>
+        <li><a target="_blank" href="https://www.adjd.gov.ae/">ADJD</a></li>
+        <li><a target="_blank" href="https://www.hbl.com/">HBL Bank</a></li>
+        <li><a target="_blank" href="https://www.sbp.org.pk/">State Bank of Pakistan</a></li>
+        <li><a target="_blank" href="https://www.sindhpolice.gov.pk/">Sindh Police</a></li>
+        <li><a target="_blank" href="https://www.fbr.gov.pk/">Federal Board of Revenue</a></li>
+        <li><a target="_blank" href="https://www.nadra.gov.pk/">Nadra</a></li>
+        <li><a target="_blank" href="https://www.piaa.com.pk/">Pakistan International Airlines</a></li>
+        <li><a target="_blank" href="https://punjabpolice.gov.pk/">Punjab Police</a></li>
+        <li><a target="_blank" href="https://coursera.org">Coursera</a></li>
+        <li><a target="_blank" href="https://edx.org">edX</a></li>
+        <li><a target="_blank" href="https://khanacademy.org">Khan Academy</a></li>
+        <li><a target="_blank" href="https://udemy.com">Udemy</a></li>
+        <li><a target="_blank" href="https://skillshare.com">Skillshare</a></li>
+        <li><a target="_blank" href="https://lynda.com">Lynda</a></li>
+        <li><a target="_blank" href="https://codecademy.com">Codecademy</a></li>
+        <li><a target="_blank" href="https://freecodecamp.org">FreeCodeCamp</a></li>
+        <li><a target="_blank" href="https://w3schools.com">W3Schools</a></li>
+
+    </ul>
+
     
     <h2>Secondary Bookmarks</h2>
-    <p>
-        <a target="_blank" href="https://twitter.com">Open Twitter</a>
-    </p>
-       <p><a target="_blank" href="https://instagram.com">Open Instagram</a></p>
-       <p><a target="_blank" href="https://linkedin.com">Open LinkedIn</a></p>
-       <p><a target="_blank" href="https://github.com">Open GitHub</a></p>
+    <p>These are some additional bookmarks that I find useful:</p>
+    <ol type="I">
+        <li><a target="_blank" href="https://bing.com">Bing</a></li>
+        <li><a target="_blank" href="https://yahoo.com">Yahoo</a></li>
+        <li><a target="_blank" href="https://duckduckgo.com">DuckDuck Go</a></li>
+        <li><a target="_blank" href="https://amazon.com">Amazon</a></li>
+        <li><a target="_blank" href="https://ebay.com">eBay</a></li>
+        <li><a target="_blank" href="https://craigslist.org">Craigslist</a></li>
+        <li><a target="_blank" href="https://twitter.com">Twitter</a></li>
+        <li><a target="_blank" href="https://linkedin.com">LinkedIn</a></li>
+        <li><a target="_blank" href="https://pinterest.com">Pinterest</a></li>
+        <li><a target="_blank" href="https://tumblr.com">Tumblr</a></li>
+        <li><a target="_blank" href="https://vk.com">VK</a></li>
+        <li><a target="_blank" href="https://snapchat.com">Snapchat</a></li>
+        <li><a target="_blank" href="https://tiktok.com">TikTok</a></li>
+        <li><a target="_blank" href="https://whatsapp.com">WhatsApp</a></li>
+        <li><a target="_blank" href="https://telegram.org">Telegram</a  ></li>
+        <li><a target="_blank" href="https://discord.com">Discord</a></li>
+        <li><a target="_blank" href="https://spotify.com">Spotify</a></li>
+        <li><a target="_blank" href="https://apple.com">Apple</a></li>
+        <li><a target="_blank" href="https://soundcloud.com">SoundCloud</a></li>
+        <li><a target="_blank" href="https://vimeo.com">Vimeo</a></li>
+        <li><a target="_blank" href="https://dailymotion.com">Dailymotion</a></li>
+        <li><a target="_blank" href="https://pandora.com">Pandora</a></li>
+        <li><a target="_blank" href="https://hulu.com">Hulu</a></li>
+        <li><a target="_blank" href="https://disneyplus.com">Disney+</a></li>
+        <li><a target="_blank" href="https://amazonprime.com">Amazon Prime</a></li>
+        <li><a target="_blank" href="https://hbo.com">HBO</a></li>
+        <li><a target="_blank" href="https://bbc.co.uk">BBC</a></li>
+        <li><a target="_blank" href="https://cnn.com">CNN</a></li>
+        <li><a target="_blank" href="https://twitch.tv">Twitch</a></li>
+        <li><a target="_blank" href="https://etsy.com">Etsy</a></li>
+        <li><a target="_blank" href="https://fiverr.com">Fiverr</a></li>
+        <li><a target="_blank" href="https://upwork.com">Upwork</a></li>
+        <li><a target="_blank" href="https://behance.net">Behance</a></li>
+        <li><a target="_blank" href="https://dribbble.com">Dribbble</a></li>
+        <li><a target="_blank" href="https://canva.com">Canva</a></li>
+        <li><a target="_blank" href="https://adobe.com">Adobe</a></li>
+        <li><a target="_blank" href="https://microsoft.com">Microsoft</a></li>
+        <li><a target="_blank" href="https://pluralsight.com">Pluralsight</a></li>
+        <li><a target="_blank" href="https://udacity.com">Udacity</a></li>
 
+    </ol>
+
+    <!-- i will update it soon -->
     
 </body>
 </html>
